--- a/vignettes/TAME-toolkit-clean.Rmd
+++ b/vignettes/TAME-toolkit-clean.Rmd
@@ -48,7 +48,7 @@ This training module was developed by Dr. Paul Kruse and Dr. Caroline Ring with 
 
 Fall 2023
 
-*Disclaimer: The views expressed in this document are those of the authours and do not necessarily reflect the views or policies of the U.S. EPA.
+*Disclaimer: The views expressed in this document are those of the authours and do not necessarily reflect the views or policies of the U.S. EPA.*
 
 
 ## Introduction to Training Module
